--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="FreeFlight" default="help">
+<project name="cvdrone" default="help">
 
 	<property file="environment.properties" />
 	<!-- The local.properties file is created and updated by the 'android' tool.
